fix: margins on mobile

--- a/components/AltHeader/AltHeader.module.css
+++ b/components/AltHeader/AltHeader.module.css
@@ -102,7 +102,6 @@
   font-size: 4rem;
   color: var(--color-white);
   padding: 1rem;
-  margin: 0 2rem;
   transition: 0.3s;
 }
 
